test/fixtures/syntaxerrors/var.lys
var x =
var y = 1

var var

var = 1